--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ actix-web = "4"
 actix-web-lab = "0.16"
 actix-cors = "0.6"
 
-juniper = "0.15"
+juniper = "0.15.10"
 
 env_logger = "0.9"
 log = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+derive_more = "0.99.17"
