--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ log = "0.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 derive_more = "0.99.17"
+base64 = "0.13.0"
+photon-rs = "0.3.1"
