--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,5 @@ serde_json = "1"
 derive_more = "0.99.17"
 photon-rs = "0.3.1"
 futures = "0.3.21"
-
-[dev-dependencies]
-base64 = "0.13.0"
+regex = "1.6.0"
+lazy_static = "1.4.0"
