--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 on: [push]
 
-name: build
+name: Build and Test Binary
 
 jobs:
   check:
-    name: Rust project
+    name: Build and Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
