--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,6 @@ on: [push]
 
 name: Build and Test Binary
 
-permissions:
-  contents: write
-
 jobs:
   check:
     name: Build and Test
@@ -20,27 +17,28 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
 
-      - name: Run cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-
-      - name: Run cargo fmt
+      - name: Check for formating
         uses: actions-rs/cargo@v1
         with:
           command: fmt
 
-      - name: Run cargo test
+      - name: Run clippy
         uses: actions-rs/cargo@v1
         with:
-          command: test
+          command: clippy -- -D warnings
 
-      - name: Run cargo build
+      - name: Run tests
+        uses: actions-rs/cargo@v1
+        with:
+          command: test --release
+
+      - name: Build Binary
         uses: actions-rs/cargo@v1
         with:
           command: build --release
 
-      - uses: actions/upload-artifact@v3
+      - name: Expose Binary as Artifact
+        uses: actions/upload-artifact@v3
         with:
           name: photo-binary
           path: target/release/photo
