--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,8 @@ jobs:
           profile: minimal
           components: rustfmt, clippy
 
-      - uses: Swatinem/rust-cache@v2
+      - name: Set up Cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Check for formating
         uses: actions-rs/cargo@v1
@@ -26,14 +27,10 @@ jobs:
         run: cargo clippy -- -D warnings
 
       - name: Run tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test --release
+        run: cargo test --release
 
       - name: Build Binary
-        uses: actions-rs/cargo@v1
-        with:
-          command: build --release
+        run: cargo build --release
 
       - name: Expose Binary as Artifact
         uses: actions/upload-artifact@v3
